--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ span{
 
 /* hero-section */
 .hero-section{
-    background-image: url("/hero_image.jpg");
+    background-image: url("/hero_image.png");
     background-size: cover;
     height: 400px;
     display: flex;
